Word & Letter Spacing Corrected

--- a/Fishwife/Style.css
+++ b/Fishwife/Style.css
@@ -71,7 +71,7 @@ a {
     text-decoration: none;
     color: black;
     font-family: 'PT Serif', sans-serif;
-    letter-spacing: 2px;
+    word-spacing: 2px;
 
 }
 
